--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -215,7 +215,9 @@
           {{'Exchange wallet' | translate}}
         </button>
 
+        <!-- FUG BLOCK -->
         <button
+          *ngIf="utilsService.showContentProd"
           class="tabs__item funding-tabs"
           [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
           (click)="onSelectTab(Tab.QUBERA)"
@@ -260,7 +262,11 @@
             </svg>
           </div>
           <span>{{'Funding wallet' | translate}}</span>
-          <a href="https://support.exrates.me/article/kyc-fiat-account" class="hint-link" target="_blank">?</a>
+          <a
+            href="https://support.exrates.me/article/kyc-fiat-account"
+            class="hint-link"
+            target="_blank"
+          >?</a>
         </button>
 
         <button
