--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -104,3 +104,6 @@
 //settings
 @import "pages/settings/_api-key.scss";
 @import "pages/settings/_verification.scss";
+
+//orders
+@import "pages/_orders-page.scss";
