--- a/src/app/orders/orders-history/orders-history.component.scss
+++ b/src/app/orders/orders-history/orders-history.component.scss
@@ -1,144 +1,9 @@
-::ng-deep .ng-select {
-  .ng-select-container {
-    margin: 0 auto !important;
-    height: 45px !important;
-    background-color: transparent !important;
-    border-color: #94C2FF !important;
-    overflow: unset !important;
-    border-radius: 4px;
-  }
-  .ng-value-container {
-    height: 100% !important;
-  }
-  .ng-has-value .ng-placeholder{
-    display: block !important;
-  }
-  .ng-placeholder {
-    position: absolute;
-    top: -7px;
-    left: 7px;
-    padding: 0 2px;
-    font-size: 10px;
-    line-height: 12px;
-    z-index: 100;
-    background-color: #191A39;
-    color: #94C2FF !important;
-  }
-  .ng-value{
-    color: #fff !important;
-  }
-  .ng-input {
-    height: 100%;
-    top: 0 !important;
-    input {
-      height: 100%;
-      color: #fff !important;
-      font-size: 14px !important;
-      font-family: inherit;
-    }
-  }
-  .ng-arrow {
-    border-color: #94C2FF transparent transparent !important;
-  }
-  &.ng-select-opened > .ng-select-container .ng-arrow {
-    border-color: transparent transparent #94C2FF !important;
-  }
-  .ng-dropdown-panel{
-    border-color: #94C2FF;
-    background-color: #191A39;
-    margin-bottom: 0 !important;
-  }
-  .ng-option{
-    background-color: transparent !important;
-    color: #fff !important;
-    &-marked{
-      background-color: rgba(255,255,255,.1) !important;
-    }
-  }
-  .ng-clear-wrapper{
-    width: 10px !important;
-  }
-  .ng-clear{
-    content: '' !important;
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 0 auto;
-    font-size: 0 !important;
-    vertical-align: middle;
-    background-image: url("../../../assets/img/close-light-blue.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-}
-
-//.table {
-//  margin-top: 16px;
-//  th {
-//    padding: 0 8px 12px;
-//    &:first-child {
-//      padding-left: 16px;
-//    }
-//    &:last-child {
-//      padding-right: 16px;
-//    }
-//  }
-//  td {
-//    padding: 8px;
-//    &:first-child {
-//      padding-left: 16px;
-//    }
-//    &:last-child {
-//      padding-right: 16px;
-//    }
-//  }
-//}
-//
-//.paginator {
-//  position: absolute;
-//  right: 16px;
-//  // bottom: 12px;
-//}
-
-a.active {
-  background-color: #237BEF !important;
-  cursor: pointer;
-}
-
-
-.table__details {
-  height: 0;
-  transition: 0.4s;
-  display: none;
-
-  &-show {
-    display: table-row;
-    height: auto;
-  }
-  td {
-    height: 0;
-    transition: 0.4s;
-  }
-}
-
-.select-input_label {
-  top: -5px;
-  padding: 0 2px;
-  font-size: 10px;
-  line-height: 12px;
-  z-index: 100;
-  background-color: #191A39;
-}
-
-.show-filter-popup {
-  display: block !important;
-}
-
-// TEMP STYLE
-
 ::ng-deep .mydp{
   display: flex !important;
+  .selector{
+    top: 50px;
+    left: 0;
+  }
   .selectiongroup{
     margin-left: auto !important;
     .selbtngroup {
