--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -142,12 +142,12 @@
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Total' | translate}}</div>
-        <div class="table__details-item-value">{{item.amountWithCommission | currencyFormat}} {{arrPairName[1]}}</div>
+        <div class="table__details-item-value">{{item.amountWithCommission | currencyFormat}} {{item.currencyPairName | splitCurrency: 2}}</div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Fee' | translate}}</div>
         <div class="table__details-item-value">
-          {{item.commissionFixedAmount| currencyFormat:arrPairName[1]}} {{arrPairName[1]}}
+          {{item.commissionFixedAmount| currencyFormat}} {{item.currencyPairName | splitCurrency: 2}}
         </div>
       </div>
       <div class="table__details-item">
