--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -227,7 +227,7 @@
                   <span>{{splitPairName(pair)[0]}}</span>
                   <span style="font-size: 10px; color:#A0A0A0">/ <span>{{splitPairName(pair)[1]}}</span></span>
                   <div class="txt-small txt-light-grey">Vol
-                    {{ +pair.currencyVolume | roundCurrency:splitPairName(pair)[1] | formatCurrency:'short':splitPairName(pair)[1]}}</div>
+                    {{+pair.currencyVolume | currencyFormat}}</div>
                 </div>
                 <div
                   class="table__cell table__cell--p4"
@@ -245,12 +245,12 @@
                   <!--<span class="txt-indicate">{{pair.lastOrderRate | replaceNumber:isFiat}}</span>-->
                   <!--</ng-template>-->
 
-                  <span class="txt-indicate">{{pair.lastOrderRate | currencyFormat:pair.market:'full':true}}</span>
+                  <span class="txt-indicate">{{pair.lastOrderRate | currencyFormat}}</span>
 
-                  <div
+                  <!-- <div
                     class="txt-small txt-light-grey"
                     *ngIf="pair.market !== 'USD'"
-                  >$ {{ pair.priceInUsd | number: '1.0-2' | replaceNumber:true}}</div>
+                  >$ {{ pair.priceInUsd | number: '1.0-2' | replaceNumber:true}}</div> -->
                 </div>
                 <div
                   class="table__cell table__cell--p4 table__cell--tar"
