--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -459,13 +459,13 @@
         </div>
         <ul class="s-list">
           <li class="s-item">
-            <span>{{'In case of an unsuccessful IEO, all funds are returned to all participants automatically.' | translate}}</span>
+            <span>{{'After successful IEO coin will be listed on Exchange.' | translate}}</span>
           </li>
           <li class="s-item">
-            <span>{{'In case of a successful IEO coin will listed on exchange.' | translate}}</span>
+            <span>{{'After unsuccessful IEO, all funds will be returned  to all participants automatically.' | translate}}</span>
           </li>
           <li class="s-item">
-            <span>{{'Please make sure you are aware of all risk involved.' | translate}}</span>
+            <span>{{'Please, be aware of all involved risks.' | translate}}</span>
           </li>
 
         </ul>
@@ -475,16 +475,12 @@
           <h5>{{'Additional information' | translate}}</h5>
         </div>
         <div class="a-block-item">
-          <a>{{'What are the demands to Projects that want to conduct an IEO?' | translate}}</a>
-        </div>
-        <div class="a-block-item">
-          <a>{{'Why IEO is considered safer than ICO?' | translate}}</a>
+          <a>{{'An Initial Exchange Offering (IEO) is a token sale supervised by a cryptocurrency exchange. IEOs are available exclusively to the exchange’s users, although some IEOs may take place in several exchanges. Just like ICOs, IEOs allow investors to get new cryptocurrencies (or tokens) while raising funds for promising crypto projects.' | translate}}</a>
         </div>
 
       </div>
       <div class="warning-block">
-        <p>{{'Awareness: Please remember that cryptocurrencies are high-risk investments.
-            Of course we do all our best to filter all projects but all responsibilities rest at your side.' | translate}}</p>
+        <p>{{'Awareness: Please remember that cryptocurrencies are high-risk investments!!! We are doing all our best to filter projects but all rest responsibilities are at your side.' | translate}}</p>
       </div>
     </div>
   </div>
