--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -23,7 +23,7 @@
         </p>
         <div class="widget__trading-fee">
           <span>
-            {{'Fee:' | translate}} {{buyOrder.commission | roundCurrency:arrPairName[1] | formatCurrency | exponentToNumber}} {{arrPairName[1]}}
+            {{'Fee:' | translate}} {{buyOrder.commission | currencyFormat}} {{arrPairName[1]}}
           </span>
         </div>
       </div>
@@ -163,7 +163,7 @@
           {{'Sell' | translate}} {{arrPairName[0]}}
         </p>
         <div class="widget__trading-fee">
-          <span>{{'Fee:' | translate}} {{sellOrder.commission | roundCurrency:arrPairName[1] | formatCurrency | exponentToNumber}} {{arrPairName[1]}}</span>
+          <span>{{'Fee:' | translate}} {{sellOrder.commission | currencyFormat}} {{arrPairName[1]}}</span>
         </div>
       </div>
 
