--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
@@ -110,7 +110,7 @@
                 <p>Token Sale Start Time</p>
               </div>
               <div class="table-item-value">
-                <p>2019/03/19 2:00 PM (UTC)</p>
+                <p>26.08.2019 14:00, UTC+8</p>
               </div>
             </div>
             <div class="economics-table-item">
@@ -118,7 +118,7 @@
                 <p>Token Sale End Time</p>
               </div>
               <div class="table-item-value">
-                <p>When Hard Cap is reacherd or at 2019/03/24 2:00 PM (UTC)</p>
+                <p>When Hard Cap is reacherd or at 05.09.2019 14:00, UTC+8</p>
               </div>
             </div>
 
@@ -207,7 +207,7 @@
                 <p>IEO Date</p>
               </div>
               <div class="table-item-value">
-                <p>UTC+8 14:00, May 22, 2019</p>
+                <p>UTC+8 14:00, August 26, 2019</p>
               </div>
             </div>
             <div class="economics-table-item">
