--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,15 @@
       }
 
     </style>
-    <div class="banner-content">
+    <a
+      class="banner-content"
+      href="https://about.exrates.me/ru/form-listing"
+    >
       <img
         src="assets/img/apply-by-listing.png"
         alt=""
       >
-    </div>
+    </a>
   </article>
   <!-- *ngIf="technicalWorks" -->
   <div
