DEVEX-3754 changed name

--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
@@ -95,7 +95,7 @@
     <div class="economics standart-pg">
       <div class="economics-inner">
         <div class="text-info-block">
-          <h4>Celr token sale and economics</h4>
+          <h4>ETAO token sale and economics</h4>
           <p>The initial circulating emission of ETAO tokens is 255,000,000 ЕТАО (5.1%).
             The crowdsale financing model consists of two stages: Private Sale and Public IEO Sale.
             During the Private Sale of 100,000,000 ETAO tokens will be sold at a price of $0.0040 per token.
