--- a/src/app/ieo/components/ieo-description-wrapper/ieo-description-wrapper.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/ieo-description-wrapper.component.html
@@ -3,7 +3,7 @@
     *ngSwitchCase="1"
     [ieoToken]="ieoToken"
   ></app-ieo-description>
-  <app-ieo-description2
+  <!-- <app-ieo-description2
     *ngSwitchCase="2"
     [ieoToken]="ieoToken"
   ></app-ieo-description2>
@@ -14,5 +14,5 @@
   <app-ieo-description4
     *ngSwitchCase="4"
     [ieoToken]="ieoToken"
-  ></app-ieo-description4>
+  ></app-ieo-description4> -->
 </div>
