--- a/src/app/ieo/components/get-ready-banner/get-ready-banner.component.html
+++ b/src/app/ieo/components/get-ready-banner/get-ready-banner.component.html
@@ -11,17 +11,17 @@
     </div>
     <div class="content-wr">
       <div class="kyc-title">
-        <h4>{{'Get ready for launch' | translate}}</h4>
+        <h4>{{'Ready for Launch' | translate}}</h4>
       </div>
       <div class="kyc-description">
-        <p>{{'Verify your account to participate' | translate}}</p>
+        <p>{{'To Participate' | translate}}</p>
       </div>
       <div class="button-wr">
         <button
           class="standart-btn"
           (click)="click.emit()"
         >
-          <span>{{'Verify account now' | translate}}</span>
+          <span>{{'Verify Account Now' | translate}}</span>
         </button>
       </div>
     </div>
