--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -38,7 +38,7 @@
               <td class="right-text"><span>{{IEOData.startDate | dateFromISO8601 | amFromUtc | amLocal | amDateFormat:"YYYY-MM-DD HH:mm:ss"}}</span></td>
             </tr>
             <tr>
-              <td>{{'Session Supply' | translate}}：</td>
+              <td>{{'IEO Goal' | translate}}：</td>
               <td class="right-text"><span>{{(sessionSupply || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</span></td>
             </tr>
           </table>
