--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -11,7 +11,7 @@
         <h2>{{'Exrates X-Platform' | translate}}</h2>
       </div>
       <div class="description-wr">
-        <p>{{'IEO platform for transformative projects' | translate}}</p>
+        <p>{{'IEO  platform for Crypto Projects' | translate}}</p>
       </div>
       <div class="button-wr">
         <a
@@ -339,7 +339,7 @@
             <div class="coin-info">
               <div class="coin-info-item">
                 <div class="name-info">
-                  <span>{{'Session Supply' | translate}}</span>
+                  <span>{{'IEO Goal' | translate}}</span>
                 </div>
                 <div class="info-value">
                   <span>{{item.amount * item.rate | currencyFormat}} BTC</span>
