--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -135,7 +135,7 @@
               >
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Comission' | translate}}</div>
-                  <div class="table__details-item-value">{{item.commissionAmount | roundCurrency: item.currencyName | formatCurrency}}</div>
+                  <div class="table__details-item-value">{{item.commissionAmount | currencyFormat}}</div>
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Payment system' | translate}}</div>
@@ -147,7 +147,10 @@
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Transaction hash' | translate}}</div>
-                  <div class="table__details-item-value">{{item.transactionHash}}</div>
+                  <div
+                    class="table__details-item-value"
+                    [innerHTML]="item.transactionHash | hashToUrl: item.currencyName"
+                  ></div>
                 </div>
               </td>
             </tr>
@@ -438,8 +441,10 @@
               *ngIf="item.sourceType === 'IEO' && item.operationType === 'Output'"
             >{{item.sourceType | showTransactionsType: item}}</span>
           </td>
-          <td class="table__cell">
-            <span>{{item.transactionHash}}</span>
+          <td
+            class="table__cell"
+            [innerHTML]="item.transactionHash | hashToUrl: item.currencyName"
+          >
           </td>
         </tr>
 
