--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -46,7 +46,7 @@
             class="wrap-input__message wrap-input__message--error"
             *ngIf="buyForm.get('quantity').errors['maxMarketOrder']"
           >
-            {{'Max. available to buy' | translate}} {{maxMarketOrder | currencyFormat}} {{arrPairName[0]}}
+            {{'Max. available to buy' | translate}} {{maxBuyMarketOrder | currencyFormat}} {{arrPairName[0]}}
           </span>
         </div>
       </div>
@@ -177,6 +177,17 @@
             name="quantity"
             formControlName="quantity"
           ></app-price-input>
+        </div>
+      </div>
+
+      <div *ngIf="sellForm.get('quantity').touched && sellForm.get('quantity').errors">
+        <div>
+          <span
+            class="wrap-input__message wrap-input__message--error"
+            *ngIf="sellForm.get('quantity').errors['maxMarketOrder']"
+          >
+            {{'Max. available to sell' | translate}} {{maxSellMarketOrder | currencyFormat}} {{arrPairName[0]}}
+          </span>
         </div>
       </div>
 
