--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -90,7 +90,7 @@
           <div class="">
             <span
               class="wrap-input__message wrap-input__message--error"
-              *ngIf="buyForm.get('quantity').errors['maxBuyMarketOrder']"
+              *ngIf="buyForm.get('quantity').errors['maxMarketOrder']"
             >
               {{'Max. available to buy' | translate}} {{maxBuyMarketOrder | currencyFormat}} {{arrPairName[0]}}
             </span>
@@ -239,7 +239,7 @@
           <div class="">
             <span
               class="wrap-input__message wrap-input__message--error"
-              *ngIf="sellForm.get('quantity').errors['maxBuyMarketOrder']"
+              *ngIf="sellForm.get('quantity').errors['maxMarketOrder']"
             >
               {{'Max. available to sell' | translate}} {{maxSellMarketOrder | currencyFormat}} {{arrPairName[0]}}
             </span>
