DEVEX-3715 added feature

--- a/src/app/dashboard/components/market-search/market-search.component.scss
+++ b/src/app/dashboard/components/market-search/market-search.component.scss
@@ -37,9 +37,9 @@ perfect-scrollbar{
 .widget__table .table__cell {
   padding: 2px 1px;
 }
-.table__row-star svg{
-  fill: #4A5D88;
-}
+// .table__row-star svg{
+//   fill: #4A5D88;
+// }
 
 .table__cell--start {
   padding-left: 12px !important;
