--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -90,13 +90,7 @@
     position: relative;
     height: 100%;
     padding: 32px 12px;
-    // &--jcc {
-    //   display: -webkit-flex;
-    //   display: -ms-flex;
-    //   display: flex;
-    //   flex-direction: column;
-    //   justify-content: center;
-    // }
+
   }
 
   &__title {
@@ -381,22 +375,8 @@
 .dark-theme {
   .modal {
     color: #000;
-    //background-color: $dark-indigo;
-
     &__header {
-      //border-color: rgba(160, 160, 160, .1);
     }
-
-    //&__code-grey-field {
-    //  background-color: transparent;
-    //  border: 1px solid $light-blue;
-    //}
-
-    //&__code-2fa {
-    //  span {
-    //    color: $light-blue;
-    //  }
-    //}
     .title{
       color:$dark-indigo;
     }
@@ -437,8 +417,8 @@
     }
 
     .btn {
-      color: $darker-blue;
-      border: 1px solid $darker-blue;
+      // color: $darker-blue;
+      // border: 1px solid $darker-blue;
 
       &:hover {
         color: #fff;
