--- a/src/app/dashboard/components/market-search/market-search.component.html
+++ b/src/app/dashboard/components/market-search/market-search.component.html
@@ -70,7 +70,7 @@
               [attr.data-marketItem]="pair.currencyPairId"
             >
               <td
-                class="table__cell table__cell--start"
+                class="table__cell table__cell--start favorite-cell"
                 *ngIf="isAuthenticated"
                 [attr.data-favorite]="pair.currencyPairId"
               >
