--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -20,6 +20,7 @@
           (click)="toggleCurrencyDropdown()"
           [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
         >
+        <div class="icon-wr">
           <img
             [src]="activeFiat.name | getIconUrl:true"
             class="select__list-item-icon select__list-item-icon--mobile"
@@ -28,6 +29,7 @@
             [src]="activeFiat.name | getIconUrl"
             class="select__list-item-icon select__list-item-icon--destop"
           >
+        </div>
           {{activeFiat.name}}
         </div>
         <div class="select__label">{{'Currency' | translate}}</div>
@@ -43,10 +45,13 @@
             *ngFor="let currency of fiatNames"
             (click)="selectCurrency(currency)"
           >
+          <div class="icon-wr">
             <img
               [src]="currency.name | getIconUrl"
               class="select__list-item-icon"
             >
+          </div>
+            
             {{currency.name}}
           </li>
         </ul>
