--- a/src/assets/scss/components/_side-popups.scss
+++ b/src/assets/scss/components/_side-popups.scss
@@ -1105,3 +1105,24 @@
     }
   }
 }
+
+
+.side-popups{
+
+    .select__searching-item {
+      display: flex;
+  }
+  .icon-wr{
+    width: 21px;
+    height: 14px;
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    .select__list-item-icon{
+      max-width: 100%;
+      max-height: 14px;
+      width: auto;
+      height: 100%;
+    }
+  }
+}
