--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -77,6 +77,7 @@
         <div class="row row--jcsb widget__trading-row  input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input
+              #quantityBuy
               [placeholder]="translateService.instant('Quantity')"
               [currencyLabel]="arrPairName[0]"
               [forTrading]="true"
@@ -225,6 +226,7 @@
         <div class="row row--jcsb widget__trading-row input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input
+              #quantitySell
               [placeholder]="translateService.instant('Quantity')"
               [currencyLabel]="arrPairName[0]"
               [forTrading]="true"
