--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -20,16 +20,16 @@
           (click)="toggleCurrencyDropdown()"
           [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
         >
-        <div class="icon-wr">
-          <img
-            [src]="activeFiat.name | getIconUrl:true"
-            class="select__list-item-icon select__list-item-icon--mobile"
-          >
-          <img
-            [src]="activeFiat.name | getIconUrl"
-            class="select__list-item-icon select__list-item-icon--destop"
-          >
-        </div>
+          <div class="icon-wr">
+            <img
+              [src]="activeFiat.name | getIconUrl:true"
+              class="select__list-item-icon select__list-item-icon--mobile"
+            >
+            <img
+              [src]="activeFiat.name | getIconUrl"
+              class="select__list-item-icon select__list-item-icon--destop"
+            >
+          </div>
           {{activeFiat.name}}
         </div>
         <div class="select__label">{{'Currency' | translate}}</div>
@@ -45,13 +45,13 @@
             *ngFor="let currency of fiatNames"
             (click)="selectCurrency(currency)"
           >
-          <div class="icon-wr">
-            <img
-              [src]="currency.name | getIconUrl"
-              class="select__list-item-icon"
-            >
-          </div>
-            
+            <div class="icon-wr">
+              <img
+                [src]="currency.name | getIconUrl"
+                class="select__list-item-icon"
+              >
+            </div>
+
             {{currency.name}}
           </li>
         </ul>
@@ -141,7 +141,7 @@
 
         <div class="wrap-input__message--show">
           <span *ngIf="!form.valid">
-            {{'Min. sum for deposit' | translate}} {{+(minRefillSum || 0) | roundCurrency: 'USD' | formatCurrency: 'short': 'USD'}}
+            {{'Min. sum for deposit' | translate}} {{+(minRefillSum || 0) | currencyFormat: 'USD'}}
             {{activeFiat ? activeFiat.name : ''}}
           </span>
         </div>
@@ -152,7 +152,7 @@
           *ngIf="!form.valid && isSubmited"
         >
           <span class="wrap-input__message">
-            {{'Should be at least' | translate}} {{+(minRefillSum || 0) | roundCurrency: 'USD' | formatCurrency: 'short': 'USD'}}
+            {{'Should be at least' | translate}} {{+(minRefillSum || 0) | currencyFormat: 'USD'}}
           </span>
         </div>
         <!--Input error section ends-->
@@ -167,14 +167,46 @@
 
     </div>
   </form>
-  <button
-    class="btn btn--center"
-    *ngIf="!submitSuccess && selectedMerchant"
-    (click)="submitRefill()"
-    [disabled]="!form.valid || !selectedMerchant.name || loading"
-  >
-    {{'Refill' | translate}}
-  </button>
+
+  <div class="send__line"></div>
+
+  <ng-container>
+    <div class="send__info">
+      <div class="send__info-row">
+        <div class="send__info-title">{{'You want to refill:' | translate}}</div>
+        <div class="send__info-value">
+          {{calculateData.amount | currencyFormat: 'USD'}} {{activeFiat.name}}
+        </div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
+        <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}}
+          {{activeFiat.name}}
+        </div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Total comission:' | translate}}</div>
+        <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
+          {{activeFiat.name}}
+        </div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Total with comission:' | translate}}</div>
+        <div class="send__info-value">{{calculateData.resultAmount}} {{activeFiat.name}}</div>
+      </div>
+    </div>
+
+    <button
+      class="btn btn--center"
+      *ngIf="!submitSuccess && selectedMerchant"
+      (click)="submitRefill()"
+      [disabled]="!form.valid || !selectedMerchant.name || loading"
+    >
+      {{'Refill' | translate}}
+    </button>
+  </ng-container>
+
+  <div class="send__line"></div>
 
   <!-- показывать после успешного создания заявки-->
   <div
