--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -14,12 +14,12 @@
             class="select__value select__value--active"
             (click)="currencyDropdownToggle()"
           >
-          <div class="icon-wr">
-            <img
-              [src]="(currName) | getIconUrl"
-              class="select__list-item-icon"
-            >
-          </div>
+            <div class="icon-wr">
+              <img
+                [src]="(currName) | getIconUrl"
+                class="select__list-item-icon"
+              >
+            </div>
             {{currName}}
           </div>
           <div class="select__label">{{'Currency' | translate}}</div>
@@ -37,12 +37,12 @@
               *ngFor="let currency of fiatNames"
               (click)="selectCurrency(currency)"
             >
-            <div class="icon-wr">
-              <img
-                [src]="currency.name | getIconUrl"
-                class="select__list-item-icon"
-              >
-            </div>
+              <div class="icon-wr">
+                <img
+                  [src]="currency.name | getIconUrl"
+                  class="select__list-item-icon"
+                >
+              </div>
               {{currency.name}}
             </li>
 
@@ -254,7 +254,7 @@
         <div class="send__info-row">
           <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
           <div class="send__info-value">
-            {{calculateData.amount | roundCurrency: currName | formatCurrency: 'short': currName}} {{currName}}
+            {{calculateData.amount | currencyFormat: 'USD'}} {{currName}}
           </div>
         </div>
         <div class="send__info-row">
