--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -1475,5 +1475,5 @@ app-embedded-orders-mobile{
   flex-direction: column;
   width: 100%;
   align-items: center;
-      background-color: #23243F;
+  // background-color: #23243F;
 }
