DEVEX-3702 added functionality

--- a/src/assets/scss/components/_refil.scss
+++ b/src/assets/scss/components/_refil.scss
@@ -40,9 +40,9 @@
 	&__crypto-memo{
 		margin-top: 20px;
 	}
-	&__qr-code{
-		display: none;
-	}
+	// &__qr-code{
+	// 	display: none;
+	// }
 	&__select, &__wrap-input {
 		width: 100%;
 		max-width: 230px;
