--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -20,16 +20,16 @@
           (click)="toggleCurrencyDropdown()"
           [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
         >
-        <div class="icon-wr">
-          <img
-            [src]="activeFiat.name | getIconUrl:true"
-            class="select__list-item-icon select__list-item-icon--mobile"
-          >
-          <img
-            [src]="activeFiat.name | getIconUrl"
-            class="select__list-item-icon select__list-item-icon--destop"
-          >
-        </div>
+          <div class="icon-wr">
+            <img
+              [src]="activeFiat.name | getIconUrl:true"
+              class="select__list-item-icon select__list-item-icon--mobile"
+            >
+            <img
+              [src]="activeFiat.name | getIconUrl"
+              class="select__list-item-icon select__list-item-icon--destop"
+            >
+          </div>
           {{activeFiat.name}}
         </div>
         <div class="select__label">{{'Currency' | translate}}</div>
@@ -45,13 +45,13 @@
             *ngFor="let currency of fiatNames"
             (click)="selectCurrency(currency)"
           >
-          <div class="icon-wr">
-            <img
-              [src]="currency.name | getIconUrl"
-              class="select__list-item-icon"
-            >
-          </div>
-            
+            <div class="icon-wr">
+              <img
+                [src]="currency.name | getIconUrl"
+                class="select__list-item-icon"
+              >
+            </div>
+
             {{currency.name}}
           </li>
         </ul>
@@ -181,62 +181,119 @@
     class="refill__fiat-successful"
     *ngIf="submitSuccess"
   >
-    <div class="refill__fiat-successful-icon">
-      <svg
-        width="60"
-        height="60"
-        viewBox="0 0 60 60"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <circle
-          cx="30"
-          cy="30"
-          r="29"
-          fill="transparent"
-          stroke="#237BEF"
-          stroke-width="2"
-        />
-        <path
-          d="M44.5753 19.4247C44.0091 18.8584 43.091 18.8584 42.5247 19.4247L25.1528 36.7968L18.4753 30.1193C17.9091 29.553 16.9911 29.5531 16.4247 30.1193C15.8584 30.6855 15.8584 31.6036 16.4247 32.1699L24.1275 39.8725C24.6936 40.4388 25.6123 40.4384 26.1781 39.8725L44.5753 21.4753C45.1416 20.9091 45.1415 19.991 44.5753 19.4247Z"
-          fill="#237BEF"
-        />
-      </svg>
-    </div>
-    <div class="title refill__fiat-successful-title">{{'Request was created!' | translate}}</div>
-    <div class="subtitle refill__fiat-successful-subtitle">
-      {{'Please go to' | translate}}
-      <a
-        class="standart-link"
-        #redirectionLink
-        href="{{redirectionUrl}}"
-        (click)="hideSend()"
-      >{{selectMerchantName}}</a>
-      {{'to make a payment' | translate}}
-      <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
-    </div>
-    <div class="subtitle refill__fiat-successful-subtitle">
-      {{'You can track the progress in history section on' | translate}} <a
-        class="standart-link"
-        (click)="goToBalances()"
-      >{{'funds' | translate}}</a> {{'page' | translate}}
-    </div>
+    <div [ngSwitch]="selectMerchantName">
+      <ng-container *ngSwitchCase="'QIWI'">
+        <h2 class="title refill__title">{{'Fiat Deposit' | translate}} <span>{{activeFiat.name}}</span></h2>
+        <div class="refill__crypto-refill-info">
+          <div class="refill__qr-code">
+            <qr-code
+              [value]="qiwiResData.qr"
+              *ngIf="qiwiResData.qr && qiwiResData.address"
+              [size]="150"
+            ></qr-code>
+          </div>
+          <div>
+            <div
+              class="refill__crypto-address"
+              *ngIf="qiwiResData.address"
+            >
+              <h6 class="refill__crypto-title"><span>{{activeFiat?.name}}</span> {{'address' | translate}}</h6>
+              <div class="refill__crypto-hash">{{qiwiResData.address}}</div>
+              <button
+                class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+                *ngIf="!isSowCopyAddress"
+                (click)="copyToBuffer(qiwiResData.address, 'Copy address')"
+              >
+                {{'Copy address' | translate}}
+              </button>
+              <button
+                class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+                *ngIf="isShowCopyAddress"
+              >
+                {{'Copied' | translate}}
+              </button>
+            </div>
+            <!-- <div
+              class="refill__crypto-memo"
+              *ngIf="cryptoDataByName.merchantCurrencyData[0].additionalFieldName && !!additionalAddress"
+            >
+              <h6 class="refill__crypto-title">{{cryptoDataByName.merchantCurrencyData[0].additionalFieldName}}</h6>
+              <div class="refill__crypto-hash">{{additionalAddress}}</div>
+              <button
+                class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+                *ngIf="!isSowCopyMemoId"
+                (click)="copyToBuffer(additionalAddress, 'Copy id')"
+              >
+                {{'Copy id' | translate}}
+              </button>
+              <button
+                class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+                *ngIf="isSowCopyMemoId"
+              >{{'Copied' | translate}}</button>
+            </div> -->
+          </div>
+        </div>
+      </ng-container>
 
-    <form
-      name="hideForm"
-      method="post"
-      [action]="refillData.redirectionUrl"
-      target="_blank"
-      rel="nofollow noopener noreferrer"
-      *ngIf="refillData"
-    >
-      <input
-        type="hidden"
-        [name]="key"
-        [value]="refillData.params[key]"
-        *ngFor="let key of refillData.params | keys"
-      >
-    </form>
+      <ng-container *ngSwitchDefault>
+        <div class="refill__fiat-successful-icon">
+          <svg
+            width="60"
+            height="60"
+            viewBox="0 0 60 60"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <circle
+              cx="30"
+              cy="30"
+              r="29"
+              fill="transparent"
+              stroke="#237BEF"
+              stroke-width="2"
+            />
+            <path
+              d="M44.5753 19.4247C44.0091 18.8584 43.091 18.8584 42.5247 19.4247L25.1528 36.7968L18.4753 30.1193C17.9091 29.553 16.9911 29.5531 16.4247 30.1193C15.8584 30.6855 15.8584 31.6036 16.4247 32.1699L24.1275 39.8725C24.6936 40.4388 25.6123 40.4384 26.1781 39.8725L44.5753 21.4753C45.1416 20.9091 45.1415 19.991 44.5753 19.4247Z"
+              fill="#237BEF"
+            />
+          </svg>
+        </div>
+        <div class="title refill__fiat-successful-title">{{'Request was created!' | translate}}</div>
+        <div class="subtitle refill__fiat-successful-subtitle">
+          {{'Please go to' | translate}}
+          <a
+            class="standart-link"
+            #redirectionLink
+            href="{{redirectionUrl}}"
+            (click)="hideSend()"
+          >{{selectMerchantName}}</a>
+          {{'to make a payment' | translate}}
+          <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
+        </div>
+        <div class="subtitle refill__fiat-successful-subtitle">
+          {{'You can track the progress in history section on' | translate}} <a
+            class="standart-link"
+            (click)="goToBalances()"
+          >{{'funds' | translate}}</a> {{'page' | translate}}
+        </div>
+
+        <form
+          name="hideForm"
+          method="post"
+          [action]="refillData.redirectionUrl"
+          target="_blank"
+          rel="nofollow noopener noreferrer"
+          *ngIf="refillData"
+        >
+          <input
+            type="hidden"
+            [name]="key"
+            [value]="refillData.params[key]"
+            *ngFor="let key of refillData.params | keys"
+          >
+        </form>
+      </ng-container>
+    </div>
 
   </div>
 
